codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__active_reconnect__reconnect_failed.snap
---
source: tui/src/app/tests/active_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
• Reconnect failed — check the endpoint, then relaunch ([elapsed])


› Ask Codex to do anything

  ctrl+c quit
