codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__active_reconnect__reconnecting_after_prolonged_outage.snap
---
source: tui/src/app/tests/active_reconnect_tests.rs
expression: rendered
---
• Reconnecting to app-server… ([elapsed])


› Ask Codex to do anything

  ctrl+c quit
