codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__active_reconnect__restored_conversation.snap
---
source: tui/src/app/tests/active_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
• Queued follow-up inputs
  ↳ old queued input
    ⌥+↑ edit last queued message

› kept draft

  gpt-test default                                                   Plan mode
